# model-in-browser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  e2e.yml  release.yml
changelog.d/: 20251229_smollm2_browser_inference.md  20251230_130503_fix_wasm_dead_code_warning.md  20260101_213120_fix_inference_bug.md  20260103_011408_fix_second_message.md  20260108_025456_chat_ui_research.md  20260108_032500_switchable_chat_providers.md
docs/case-studies/issue-9/: README.md  implementation-examples.md  library-comparison.md
examples/: basic_usage.rs
scripts/: build-wasm.sh  dev.sh
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: inference.spec.ts
web/src/: App.tsx  index.css  worker.ts
web/src/components/: ChatContainer.tsx  ChatProviderSelector.tsx  MarkdownRenderer.tsx
web/src/components/chat-providers/: AssistantUIProvider.tsx  ChatscopeProvider.tsx  ReachatProvider.tsx  ReactChatElementsProvider.tsx  index.ts
web/src/context/: ChatProviderContext.tsx
web/src/types/: chat.ts
