[workspace]
members = [".", "server"]
# Note: "wasm" is excluded from workspace as it requires wasm32 target
# Build it separately with: cd wasm && wasm-pack build --target web
exclude = ["wasm"]
resolver = "2"

[package]
name = "model-in-browser"
version = "0.1.0"
edition = "2021"
description = "Browser-based LLM inference using SmolLM2 and WebAssembly"
readme = "README.md"
license = "Unlicense"
keywords = ["llm", "wasm", "browser", "smollm2", "ai"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/link-assistant/model-in-browser"
documentation = "https://github.com/link-assistant/model-in-browser"
rust-version = "1.70"

[lib]
name = "model_in_browser"
path = "src/lib.rs"

[[bin]]
name = "model-in-browser"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
