[package]
name = "model-server"
version = "0.1.0"
edition = "2021"
description = "Local development server for the browser-based LLM demo"
license = "Unlicense"
repository = "https://github.com/link-assistant/model-in-browser"

[[bin]]
name = "model-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
