# This package is intentionally NOT part of the parent workspace
# because it requires the wasm32-unknown-unknown target
[workspace]

[package]
name = "smollm2-wasm"
version = "0.1.0"
edition = "2021"
description = "SmolLM2 inference compiled to WebAssembly for browser-based LLM"
license = "Unlicense"
repository = "https://github.com/link-assistant/model-in-browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "WorkerGlobalScope",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Random number generation for WASM
# getrandom 0.2.x is used by some dependencies, 0.3.x by others
# Both need JS feature enabled for wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }

# Candle ML framework
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
